# Stero_lab2

src/mobile_STERO-19Z-Bugyi-Pierczyk/: package.xml
