<package>
<name>stero_mobile_init</name>
<version>1.2.4</version>
<description>uzupelnic</description>
<maintainer email="krzysztof.pierczyk@gmail.com"> Krzysztof Pierczyk </maintainer>
<license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>elektron</run_depend>

</package>
